xpl_parser.output
   0  $accept : program $end

   1  program : decls
   2          |

   3  decls : decls decl
   4        | decl

   5  decl : vardec ';'
   6       | func

   7  vardec : tPUBLIC vtype tIDENTIFIER
   8         | tPUBLIC vtype tIDENTIFIER '=' expr
   9         | tUSE vtype tIDENTIFIER
  10         | blkvar

  11  func : vtype tIDENTIFIER '(' args ')'
  12       | tPROCEDURE_T tIDENTIFIER '(' args ')'
  13       | tPUBLIC vtype tIDENTIFIER '(' args ')'
  14       | tPUBLIC tPROCEDURE_T tIDENTIFIER '(' args ')'
  15       | tUSE vtype tIDENTIFIER '(' args ')'
  16       | tUSE tPROCEDURE_T tIDENTIFIER '(' args ')'
  17       | vtype tIDENTIFIER '(' args ')' block
  18       | tPROCEDURE_T tIDENTIFIER '(' args ')' block
  19       | tPUBLIC vtype tIDENTIFIER '(' args ')' block
  20       | tPUBLIC tPROCEDURE_T tIDENTIFIER '(' args ')' block
  21       | vtype tIDENTIFIER '(' args ')' '=' lit block
  22       | tPUBLIC vtype tIDENTIFIER '(' args ')' '=' lit block

  23  args : vars
  24       |

  25  vars : vars ',' var
  26       | var

  27  block : '{' blkvars instrs '}'
  28        | '{' blkvars '}'
  29        | '{' instrs '}'
  30        | '{' '}'

  31  blkvar : vtype tIDENTIFIER
  32         | vtype tIDENTIFIER '=' expr

  33  blkvars : blkvars blkvar ';'
  34          | blkvar ';'

  35  instrs : instrs instr
  36         | instr

  37  instr : expr ';'
  38        | expr '!'
  39        | expr tPRINTLN
  40        | tNEXT
  41        | tSTOP
  42        | tRETURN
  43        | cond
  44        | iter
  45        | block
  46        | tFROM expr tTO expr tAPPLY tIDENTIFIER tTO tIDENTIFIER

  47  cond : tIF if

  48  if : '(' expr ')' instr tELSIF if
  49     | '(' expr ')' instr tELSE instr
  50     | '(' expr ')' instr

  51  iter : tWHILE '(' expr ')' instr
  52       | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' instr
  53       | tSWEEP '+' '(' lval ':' expr ':' expr ')' instr
  54       | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' instr
  55       | tSWEEP '-' '(' lval ':' expr ':' expr ')' instr

  56  var : vtype tIDENTIFIER

  57  vtype : tINTEGER_T
  58        | tREAL_T
  59        | tSTRING_T
  60        | '[' vtype ']'

  61  lit : tINTEGER
  62      | tFLOAT
  63      | str
  64      | tNULL

  65  expr : lit
  66       | '-' expr
  67       | '+' expr
  68       | expr '+' expr
  69       | expr '-' expr
  70       | expr '*' expr
  71       | expr '/' expr
  72       | expr '%' expr
  73       | expr '<' expr
  74       | expr '>' expr
  75       | expr tGE expr
  76       | expr tLE expr
  77       | expr tNE expr
  78       | expr tEQ expr
  79       | '(' expr ')'
  80       | lval
  81       | lval '=' expr
  82       | lval '?'
  83       | '~' expr
  84       | expr '|' expr
  85       | expr '&' expr
  86       | '@'
  87       | '[' expr ']'
  88       | tIDENTIFIER '(' callargs ')'

  89  str : str tSTRING
  90      | tSTRING

  91  callargs : exprs
  92           |

  93  exprs : expr ',' exprs
  94        | expr

  95  lval : tIDENTIFIER
  96       | expr '[' expr ']'

state 0
	$accept : . program $end  (0)
	program : .  (2)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	tPROCEDURE_T  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	'['  shift 7
	$end  reduce 2

	program  goto 8
	decl  goto 9
	func  goto 10
	vardec  goto 11
	blkvar  goto 12
	decls  goto 13
	vtype  goto 14


state 1
	vtype : tINTEGER_T .  (57)

	.  reduce 57


state 2
	vtype : tREAL_T .  (58)

	.  reduce 58


state 3
	vtype : tSTRING_T .  (59)

	.  reduce 59


state 4
	func : tPROCEDURE_T . tIDENTIFIER '(' args ')'  (12)
	func : tPROCEDURE_T . tIDENTIFIER '(' args ')' block  (18)

	tIDENTIFIER  shift 15
	.  error


state 5
	vardec : tUSE . vtype tIDENTIFIER  (9)
	func : tUSE . vtype tIDENTIFIER '(' args ')'  (15)
	func : tUSE . tPROCEDURE_T tIDENTIFIER '(' args ')'  (16)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	tPROCEDURE_T  shift 16
	'['  shift 7
	.  error

	vtype  goto 17


state 6
	vardec : tPUBLIC . vtype tIDENTIFIER  (7)
	vardec : tPUBLIC . vtype tIDENTIFIER '=' expr  (8)
	func : tPUBLIC . vtype tIDENTIFIER '(' args ')'  (13)
	func : tPUBLIC . tPROCEDURE_T tIDENTIFIER '(' args ')'  (14)
	func : tPUBLIC . vtype tIDENTIFIER '(' args ')' block  (19)
	func : tPUBLIC . tPROCEDURE_T tIDENTIFIER '(' args ')' block  (20)
	func : tPUBLIC . vtype tIDENTIFIER '(' args ')' '=' lit block  (22)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	tPROCEDURE_T  shift 18
	'['  shift 7
	.  error

	vtype  goto 19


state 7
	vtype : '[' . vtype ']'  (60)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	.  error

	vtype  goto 20


state 8
	$accept : program . $end  (0)

	$end  accept


state 9
	decls : decl .  (4)

	.  reduce 4


state 10
	decl : func .  (6)

	.  reduce 6


state 11
	decl : vardec . ';'  (5)

	';'  shift 21
	.  error


state 12
	vardec : blkvar .  (10)

	.  reduce 10


state 13
	program : decls .  (1)
	decls : decls . decl  (3)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	tPROCEDURE_T  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	'['  shift 7
	$end  reduce 1

	decl  goto 22
	func  goto 10
	vardec  goto 11
	blkvar  goto 12
	vtype  goto 14


state 14
	func : vtype . tIDENTIFIER '(' args ')'  (11)
	func : vtype . tIDENTIFIER '(' args ')' block  (17)
	func : vtype . tIDENTIFIER '(' args ')' '=' lit block  (21)
	blkvar : vtype . tIDENTIFIER  (31)
	blkvar : vtype . tIDENTIFIER '=' expr  (32)

	tIDENTIFIER  shift 23
	.  error


state 15
	func : tPROCEDURE_T tIDENTIFIER . '(' args ')'  (12)
	func : tPROCEDURE_T tIDENTIFIER . '(' args ')' block  (18)

	'('  shift 24
	.  error


state 16
	func : tUSE tPROCEDURE_T . tIDENTIFIER '(' args ')'  (16)

	tIDENTIFIER  shift 25
	.  error


state 17
	vardec : tUSE vtype . tIDENTIFIER  (9)
	func : tUSE vtype . tIDENTIFIER '(' args ')'  (15)

	tIDENTIFIER  shift 26
	.  error


state 18
	func : tPUBLIC tPROCEDURE_T . tIDENTIFIER '(' args ')'  (14)
	func : tPUBLIC tPROCEDURE_T . tIDENTIFIER '(' args ')' block  (20)

	tIDENTIFIER  shift 27
	.  error


state 19
	vardec : tPUBLIC vtype . tIDENTIFIER  (7)
	vardec : tPUBLIC vtype . tIDENTIFIER '=' expr  (8)
	func : tPUBLIC vtype . tIDENTIFIER '(' args ')'  (13)
	func : tPUBLIC vtype . tIDENTIFIER '(' args ')' block  (19)
	func : tPUBLIC vtype . tIDENTIFIER '(' args ')' '=' lit block  (22)

	tIDENTIFIER  shift 28
	.  error


state 20
	vtype : '[' vtype . ']'  (60)

	']'  shift 29
	.  error


state 21
	decl : vardec ';' .  (5)

	.  reduce 5


state 22
	decls : decls decl .  (3)

	.  reduce 3


state 23
	func : vtype tIDENTIFIER . '(' args ')'  (11)
	func : vtype tIDENTIFIER . '(' args ')' block  (17)
	func : vtype tIDENTIFIER . '(' args ')' '=' lit block  (21)
	blkvar : vtype tIDENTIFIER .  (31)
	blkvar : vtype tIDENTIFIER . '=' expr  (32)

	'='  shift 30
	'('  shift 31
	';'  reduce 31


state 24
	func : tPROCEDURE_T tIDENTIFIER '(' . args ')'  (12)
	func : tPROCEDURE_T tIDENTIFIER '(' . args ')' block  (18)
	args : .  (24)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	')'  reduce 24

	var  goto 32
	args  goto 33
	vars  goto 34
	vtype  goto 35


state 25
	func : tUSE tPROCEDURE_T tIDENTIFIER . '(' args ')'  (16)

	'('  shift 36
	.  error


state 26
	vardec : tUSE vtype tIDENTIFIER .  (9)
	func : tUSE vtype tIDENTIFIER . '(' args ')'  (15)

	'('  shift 37
	';'  reduce 9


state 27
	func : tPUBLIC tPROCEDURE_T tIDENTIFIER . '(' args ')'  (14)
	func : tPUBLIC tPROCEDURE_T tIDENTIFIER . '(' args ')' block  (20)

	'('  shift 38
	.  error


state 28
	vardec : tPUBLIC vtype tIDENTIFIER .  (7)
	vardec : tPUBLIC vtype tIDENTIFIER . '=' expr  (8)
	func : tPUBLIC vtype tIDENTIFIER . '(' args ')'  (13)
	func : tPUBLIC vtype tIDENTIFIER . '(' args ')' block  (19)
	func : tPUBLIC vtype tIDENTIFIER . '(' args ')' '=' lit block  (22)

	'='  shift 39
	'('  shift 40
	';'  reduce 7


state 29
	vtype : '[' vtype ']' .  (60)

	.  reduce 60


state 30
	blkvar : vtype tIDENTIFIER '=' . expr  (32)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 52
	lit  goto 53
	lval  goto 54
	str  goto 55


state 31
	func : vtype tIDENTIFIER '(' . args ')'  (11)
	func : vtype tIDENTIFIER '(' . args ')' block  (17)
	func : vtype tIDENTIFIER '(' . args ')' '=' lit block  (21)
	args : .  (24)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	')'  reduce 24

	var  goto 32
	args  goto 56
	vars  goto 34
	vtype  goto 35


state 32
	vars : var .  (26)

	.  reduce 26


state 33
	func : tPROCEDURE_T tIDENTIFIER '(' args . ')'  (12)
	func : tPROCEDURE_T tIDENTIFIER '(' args . ')' block  (18)

	')'  shift 57
	.  error


state 34
	args : vars .  (23)
	vars : vars . ',' var  (25)

	','  shift 58
	')'  reduce 23


state 35
	var : vtype . tIDENTIFIER  (56)

	tIDENTIFIER  shift 59
	.  error


state 36
	func : tUSE tPROCEDURE_T tIDENTIFIER '(' . args ')'  (16)
	args : .  (24)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	')'  reduce 24

	var  goto 32
	args  goto 60
	vars  goto 34
	vtype  goto 35


state 37
	func : tUSE vtype tIDENTIFIER '(' . args ')'  (15)
	args : .  (24)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	')'  reduce 24

	var  goto 32
	args  goto 61
	vars  goto 34
	vtype  goto 35


state 38
	func : tPUBLIC tPROCEDURE_T tIDENTIFIER '(' . args ')'  (14)
	func : tPUBLIC tPROCEDURE_T tIDENTIFIER '(' . args ')' block  (20)
	args : .  (24)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	')'  reduce 24

	var  goto 32
	args  goto 62
	vars  goto 34
	vtype  goto 35


state 39
	vardec : tPUBLIC vtype tIDENTIFIER '=' . expr  (8)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 63
	lit  goto 53
	lval  goto 54
	str  goto 55


state 40
	func : tPUBLIC vtype tIDENTIFIER '(' . args ')'  (13)
	func : tPUBLIC vtype tIDENTIFIER '(' . args ')' block  (19)
	func : tPUBLIC vtype tIDENTIFIER '(' . args ')' '=' lit block  (22)
	args : .  (24)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	')'  reduce 24

	var  goto 32
	args  goto 64
	vars  goto 34
	vtype  goto 35


state 41
	lit : tINTEGER .  (61)

	.  reduce 61


state 42
	lit : tFLOAT .  (62)

	.  reduce 62


state 43
	expr : tIDENTIFIER . '(' callargs ')'  (88)
	lval : tIDENTIFIER .  (95)

	'('  shift 65
	tPRINTLN  reduce 95
	tTO  reduce 95
	tAPPLY  reduce 95
	')'  reduce 95
	'='  reduce 95
	'|'  reduce 95
	'&'  reduce 95
	tEQ  reduce 95
	tNE  reduce 95
	tGE  reduce 95
	tLE  reduce 95
	'>'  reduce 95
	'<'  reduce 95
	'+'  reduce 95
	'-'  reduce 95
	'*'  reduce 95
	'/'  reduce 95
	'%'  reduce 95
	'['  reduce 95
	';'  reduce 95
	','  reduce 95
	'!'  reduce 95
	':'  reduce 95
	']'  reduce 95
	'?'  reduce 95


state 44
	str : tSTRING .  (90)

	.  reduce 90


state 45
	lit : tNULL .  (64)

	.  reduce 64


state 46
	expr : '~' . expr  (83)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 66
	lit  goto 53
	lval  goto 54
	str  goto 55


state 47
	expr : '+' . expr  (67)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 67
	lit  goto 53
	lval  goto 54
	str  goto 55


state 48
	expr : '-' . expr  (66)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 68
	lit  goto 53
	lval  goto 54
	str  goto 55


state 49
	expr : '[' . expr ']'  (87)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 69
	lit  goto 53
	lval  goto 54
	str  goto 55


state 50
	expr : '(' . expr ')'  (79)

	tINTEGER  shift 41
	tFLOAT  shift 42
	tIDENTIFIER  shift 43
	tSTRING  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 70
	lit  goto 53
	lval  goto 54
	str  goto 55


state 51
	expr : '@' .  (86)

	.  reduce 86


state 52
	blkvar : vtype tIDENTIFIER '=' expr .  (32)
	expr : expr . '+' expr  (68)
	expr : expr . '-' expr  (69)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '<' expr  (73)
	expr : expr . '>' expr  (74)
	expr : expr . tGE expr  (75)
	expr : expr . tLE expr  (76)
	expr : expr . tNE expr  (77)
	expr : expr . tEQ expr  (78)
	expr : expr . '|' expr  (84)
	expr : expr . '&' expr  (85)
	lval : expr . '[' expr ']'  (96)

	'|'  shift 71
	'&'  shift 72
	tEQ  shift 73
	tNE  shift 74
	tGE  shift 75
	tLE  shift 76
	'>'  shift 77
	'<'  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	'['  shift 84
	';'  reduce 32


state 53
	expr : lit .  (65)

	.  reduce 65


state 54
	expr : lval .  (80)
	expr : lval . '=' expr  (81)
	expr : lval . '?'  (82)

	'='  shift 85
	'?'  shift 86
	tPRINTLN  reduce 80
	tTO  reduce 80
	tAPPLY  reduce 80
	')'  reduce 80
	'|'  reduce 80
	'&'  reduce 80
	tEQ  reduce 80
	tNE  reduce 80
	tGE  reduce 80
	tLE  reduce 80
	'>'  reduce 80
	'<'  reduce 80
	'+'  reduce 80
	'-'  reduce 80
	'*'  reduce 80
	'/'  reduce 80
	'%'  reduce 80
	'['  reduce 80
	';'  reduce 80
	','  reduce 80
	'!'  reduce 80
	':'  reduce 80
	']'  reduce 80


state 55
	lit : str .  (63)
	str : str . tSTRING  (89)

	tSTRING  shift 87
	tPRINTLN  reduce 63
	tTO  reduce 63
	tAPPLY  reduce 63
	')'  reduce 63
	'|'  reduce 63
	'&'  reduce 63
	tEQ  reduce 63
	tNE  reduce 63
	tGE  reduce 63
	tLE  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'['  reduce 63
	';'  reduce 63
	','  reduce 63
	'{'  reduce 63
	'!'  reduce 63
	':'  reduce 63
	']'  reduce 63


state 56
	func : vtype tIDENTIFIER '(' args . ')'  (11)
	func : vtype tIDENTIFIER '(' args . ')' block  (17)
	func : vtype tIDENTIFIER '(' args . ')' '=' lit block  (21)

	')'  shift 88
	.  error


state 57
	func : tPROCEDURE_T tIDENTIFIER '(' args ')' .  (12)
	func : tPROCEDURE_T tIDENTIFIER '(' args ')' . block  (18)

	'{'  shift 89
	$end  reduce 12
	tINTEGER_T  reduce 12
	tREAL_T  reduce 12
	tSTRING_T  reduce 12
	tPROCEDURE_T  reduce 12
	tUSE  reduce 12
	tPUBLIC  reduce 12
	'['  reduce 12

	block  goto 90


state 58
	vars : vars ',' . var  (25)

	tINTEGER_T  shift 1
	tREAL_T  shift 2
	tSTRING_T  shift 3
	'['  shift 7
	.  error

	var  goto 91
	vtype  goto 35


state 59
	var : vtype tIDENTIFIER .  (56)

	.  reduce 56


state 60
	func : tUSE tPROCEDURE_T tIDENTIFIER '(' args . ')'  (16)

	')'  shift 92
	.  error


state 61
	func : tUSE vtype tIDENTIFIER '(' args . ')'  (15)
